--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "assets/go2"]
 	path = assets/go2
 	url = git://github.com/timdream/google-oauth2-web-client.git
+[submodule "test/qunit"]
+	path = test/qunit
+	url = git://github.com/jquery/qunit.git
