+ Share to Tumblr

--- a/assets/images/favicons/Makefile
+++ b/assets/images/favicons/Makefile
@@ -4,7 +4,7 @@ WGET?=wget
 CONVERT?=convert
 
 .PHONY: all
-all: facebook.png twitter.png plurk.png
+all: facebook.png twitter.png plurk.png tumblr.png
 
 facebook.png:
 	(wget http://facebook.com/favicon.ico -O facebook.ico && \
@@ -25,5 +25,13 @@ plurk.png:
 	 mv plurk-1.png plurk.png && rm plurk-0.png && \
 	 rm plurk.ico)
 
+tumblr.png:
+	(wget http://tumblr.com/favicon.ico -O tumblr.ico && \
+	 rm -f tumblr.png tumblr-0.png tumblr-1.png && \
+	 rm -f tumblr.png && \
+	 convert tumblr.ico tumblr.png && \
+	 mv tumblr-0.png tumblr.png && rm tumblr-1.png && \
+	 rm tumblr.ico)
+
 clean:
-	rm -f facebook.png facebook.ico plurk.ico plurk.png twitter.ico twitter.png
+	rm -f facebook.png facebook.ico plurk.ico plurk.png twitter.ico twitter.png tumblr.png
