--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-rev": "~0.1.0",
     "grunt-shell": "~0.2.2",
     "grunt-contrib-qunit": "~0.2.2",
-    "grunt-contrib-connect": "~0.3.0"
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-jshint": "~0.10.0"
   }
 }
