--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-usemin": "~2.1.1",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-replace": "~0.7.6",
     "grunt-rev": "~0.1.0",
     "grunt-shell": "~0.6.4",
-    "grunt-contrib-qunit": "~0.4.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-jshint": "~0.10.0"
+    "grunt-usemin": "~2.1.1"
   }
 }
