--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "url": "https://github.com/timdream/wordcloud.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "grunt": "grunt"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
