--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   },
   "license": "MIT",
   "scripts": {
+    "build-css": "sass --compass assets/first-screen.scss assets/first-screen.css && sass --compass assets/wordcloud.scss assets/wordcloud.css",
+    "build": "grunt default",
+    "deploy": "grunt deploy",
     "test": "grunt test",
+    "check-imgur-credit": "grunt check-imgur-credit",
     "grunt": "grunt"
   },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "1.0.4",
     "grunt-cli": "1.3.2",
