--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-contrib-jshint": "2.1.0",
     "grunt-contrib-qunit": "3.1.0",
     "grunt-contrib-uglify": "4.0.1",
-    "grunt-gh-pages": "3.1.0",
+    "grunt-gh-pages": "^4.0.0",
     "grunt-replace": "1.0.1",
     "grunt-rev": "0.1.0",
     "grunt-usemin": "3.1.1"
